--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,5 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true
   },
-  "include": [
-    "./src/**/*"
-  ]
+  "include": ["./src/**/*"]
 }
