--- a/package.json
+++ b/package.json
@@ -6,22 +6,14 @@
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "keywords": [
-    "path",
-    "url",
-    "routing",
-    "pattern",
-    "regexp",
-    "matching",
-    "router"
-  ],
+  "keywords": ["path", "url", "routing", "pattern", "regexp", "matching", "router"],
   "scripts": {
     "build": "webpack lib/index.js",
     "build-stats": "NODE_ENV=production webpack lib/index.js --json > stats.json",
     "prepare": "npm run build",
     "test": "jest",
-    "test:watch": "yarn test -- --watch",
-    "test:cov": "yarn test -- --coverage",
+    "test:watch": "yarn test --watch",
+    "test:cov": "yarn test --coverage",
     "lint": "tslint \"src/**/*.ts?(x)\" \"test/**/*.ts?(x)\" -t stylish",
     "lint:fix": "yarn lint -- --fix"
   },
@@ -30,35 +22,26 @@
     "url": "git+ssh://git@github.com/Realytics/path-pattern.git"
   },
   "dependencies": {
-    "path-to-regexp": "^2.0.0"
+    "path-to-regexp": "^2.1.0"
   },
   "devDependencies": {
-    "@types/history": "^4.6.0",
-    "@types/jest": "20.0.3",
-    "cross-env": "^5.0.5",
+    "@types/jest": "21.1.4",
+    "cross-env": "^5.1.0",
     "jest": "^21.2.1",
-    "ts-jest": "^21.1.2",
-    "ts-loader": "^2.3.7",
-    "tslint": "^5.7.0",
+    "ts-jest": "^21.1.3",
+    "ts-loader": "^3.0.5",
+    "tslint": "^5.8.0",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.5.3",
-    "webpack": "^3.7.0"
+    "webpack": "^3.8.1"
   },
   "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
     "transform": {
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "collectCoverageFrom": [
-      "src/**/*"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/src/.*\\.d\\.ts$"
-    ],
+    "moduleFileExtensions": ["ts", "tsx", "js"],
+    "collectCoverageFrom": ["src/**/*"],
+    "coveragePathIgnorePatterns": ["/src/.*\\.d\\.ts$"],
     "testRegex": "/test/.*\\.spec\\.(ts|tsx|js)$",
     "mapCoverage": true
   },
