--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "path-pattern",
-  "version": "1.1.0",
+  "version": "0.0.0-development",
   "description": "A url matching lib to go with Realytics/react-router-magic",
   "author": "Etienne Dldc <etienne.dldc@outlook.fr>",
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "keywords": ["path", "url", "routing", "pattern", "regexp", "matching", "router"],
+  "keywords": [
+    "path",
+    "url",
+    "routing",
+    "pattern",
+    "regexp",
+    "matching",
+    "router"
+  ],
   "scripts": {
     "build": "webpack lib/index.js",
     "build-stats": "NODE_ENV=production webpack lib/index.js --json > stats.json",
@@ -20,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/Realytics/path-pattern.git"
+    "url": "https://github.com/Realytics/path-pattern.git"
   },
   "dependencies": {
     "path-to-regexp": "^2.1.0"
@@ -29,21 +37,29 @@
     "@types/jest": "22.1.0",
     "cross-env": "^5.1.3",
     "jest": "^22.1.4",
+    "semantic-release": "^12.2.5",
     "ts-jest": "^22.0.1",
     "ts-loader": "^3.3.1",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.6.2",
-    "webpack": "^3.10.0",
-    "semantic-release": "^12.2.5"
+    "webpack": "^3.10.0"
   },
   "jest": {
     "transform": {
       "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "moduleFileExtensions": ["ts", "tsx", "js"],
-    "collectCoverageFrom": ["src/**/*"],
-    "coveragePathIgnorePatterns": ["/src/.*\\.d\\.ts$"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/src/.*\\.d\\.ts$"
+    ],
     "testRegex": "/test/.*\\.spec\\.(ts|tsx|js)$",
     "mapCoverage": true
   },
