--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:cov": "yarn test --coverage",
     "lint": "tslint \"src/**/*.ts?(x)\" \"test/**/*.ts?(x)\" -t stylish",
     "lint:fix": "yarn lint -- --fix",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "travis-deploy-once": "travis-deploy-once"
   },
   "repository": {
     "type": "git",
@@ -37,13 +38,14 @@
     "@types/jest": "22.1.0",
     "cross-env": "^5.1.3",
     "jest": "^22.1.4",
-    "semantic-release": "^12.2.5",
+    "semantic-release": "^15.1.7",
     "ts-jest": "^22.0.1",
     "ts-loader": "^3.3.1",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.6.2",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "travis-deploy-once": "^4.4.1"
   },
   "jest": {
     "transform": {
