--- a/package.json
+++ b/package.json
@@ -6,15 +6,7 @@
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "keywords": [
-    "path",
-    "url",
-    "routing",
-    "pattern",
-    "regexp",
-    "matching",
-    "router"
-  ],
+  "keywords": ["path", "url", "routing", "pattern", "regexp", "matching", "router"],
   "scripts": {
     "build": "webpack lib/index.js",
     "build-stats": "NODE_ENV=production webpack lib/index.js --json > stats.json",
@@ -35,35 +27,27 @@
     "path-to-regexp": "^2.1.0"
   },
   "devDependencies": {
-    "@types/jest": "22.1.0",
+    "@types/history": "^4.6.2",
+    "@types/jest": "22.2.3",
     "cross-env": "^5.1.3",
-    "jest": "^22.1.4",
+    "jest": "^22.4.3",
     "semantic-release": "^15.1.7",
-    "ts-jest": "^22.0.1",
+    "travis-deploy-once": "^4.4.1",
+    "ts-jest": "^22.4.4",
     "ts-loader": "^3.3.1",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.6.2",
-    "webpack": "^3.10.0",
-    "travis-deploy-once": "^4.4.1"
+    "webpack": "^3.10.0"
   },
   "jest": {
     "transform": {
       "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/src/.*\\.d\\.ts$"
-    ],
-    "testRegex": "/test/.*\\.spec\\.(ts|tsx|js)$",
-    "mapCoverage": true
+    "moduleFileExtensions": ["ts", "tsx", "js"],
+    "collectCoverageFrom": ["src/**/*"],
+    "coveragePathIgnorePatterns": ["/src/.*\\.d\\.ts$"],
+    "testRegex": "/test/.*\\.spec\\.(ts|tsx|js)$"
   },
   "bugs": {
     "url": "https://github.com/Realytics/path-pattern/issues"
