--- a/package.json
+++ b/package.json
@@ -6,15 +6,7 @@
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "keywords": [
-    "path",
-    "url",
-    "routing",
-    "pattern",
-    "regexp",
-    "matching",
-    "router"
-  ],
+  "keywords": ["path", "url", "routing", "pattern", "regexp", "matching", "router"],
   "scripts": {
     "build": "webpack lib/index.js",
     "build-stats": "NODE_ENV=production webpack lib/index.js --json > stats.json",
@@ -25,6 +17,8 @@
     "lint": "tslint \"src/**/*.ts?(x)\" \"test/**/*.ts?(x)\" -t stylish",
     "lint:fix": "yarn lint -- --fix",
     "semantic-release": "semantic-release",
+    "docs:start": "node ./docs/scripts/start.js",
+    "docs:build": "node ./docs/scripts/build.js",
     "travis-deploy-once": "travis-deploy-once"
   },
   "repository": {
@@ -32,13 +26,33 @@
     "url": "https://github.com/Realytics/path-pattern.git"
   },
   "dependencies": {
-    "path-to-regexp": "^2.2.0"
+    "path-to-regexp": "^2.2.0",
+    "react-powerplug": "^0.1.5"
   },
   "devDependencies": {
+    "@types/fs-extra": "^5.0.2",
+    "@types/highlight.js": "^9.12.2",
     "@types/history": "^4.6.2",
     "@types/jest": "22.2.3",
+    "@types/lodash": "^4.14.108",
+    "@types/markdown-it": "^0.0.4",
+    "@types/node": "^9.6.6",
+    "@types/react": "^16.3.12",
+    "@types/react-dom": "^16.0.5",
     "cross-env": "^5.1.3",
+    "fs-extra": "^5.0.0",
+    "highlight.js": "^9.12.0",
     "jest": "^22.4.3",
+    "lodash": "^4.17.10",
+    "markdown-it": "^8.4.1",
+    "milligram": "^1.3.0",
+    "normalize.css": "^8.0.0",
+    "parcel-bundler": "^1.7.1",
+    "prettier": "^1.12.1",
+    "print": "^1.1.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-json-tree": "^0.11.0",
     "semantic-release": "^15.1.7",
     "travis-deploy-once": "^4.4.1",
     "ts-jest": "^22.4.4",
@@ -52,17 +66,9 @@
     "transform": {
       "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/src/.*\\.d\\.ts$"
-    ],
+    "moduleFileExtensions": ["ts", "tsx", "js"],
+    "collectCoverageFrom": ["src/**/*"],
+    "coveragePathIgnorePatterns": ["/src/.*\\.d\\.ts$"],
     "testRegex": "/test/.*\\.spec\\.(ts|tsx|js)$"
   },
   "bugs": {
